# hardening_eshop_flask

./: LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: custom.js
templates/: admin_confirmation_email.html  application_form.html  application_submitted.html  banner.html  base.html  bootstrap.html  carts.html  confirm_user.html  footer.html  home.html  index.html  jobpage.html  jobsitem.html  login.html  nav.html  products.html  register.html
