[tool.poetry]
name = "repl-nix-radaplanakos-eshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_radaplanakos_eshop"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
wtforms = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
werkzeug = "^3.0.3"
flask-mail = "^0.9.1"
flask-login = "^0.6.3"
captcha = "^0.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
